--- a/.github/workflows/github-actions-black.yml
+++ b/.github/workflows/github-actions-black.yml
@@ -7,5 +7,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: psf/black@stable
         with:
-          options: --check
+          options: --check --verbose
           src: .
+          version: "~=22.8"
