--- a/.github/workflows/github-actions-mypy.yml
+++ b/.github/workflows/github-actions-mypy.yml
@@ -10,5 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Mypy
         run: pip install mypy
+      - name: Install types
+        run: mypy --install_types
       - name: Run Mypy
         run: mypy .
